# platform.core.convergence.d2d-conv-manager

./: 99_d2d-conv-manager.post  AUTHORS  CMakeLists.txt  LICENSE  project.config
common/: Log.h  Types.h  common.h  log.h
daemon/: CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  ClientManager.cpp  ClientManager.h  ConnectionManager.cpp  ConnectionManager.h  DbusServer.cpp  DbusServer.h  DiscoveryManager.cpp  DiscoveryManager.h  ICommunicationInfo.h  IDbusServer.h  IDevice.h  IDiscoveryProvider.cpp  IDiscoveryProvider.h  IManager.h  IService.h  IServiceInfo.h  IServiceProvider.h  IotconCommunicationInfo.h  Json.cpp  Json.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  ServiceManager.cpp  ServiceManager.h  Util.cpp  Util.h  client.cpp  client.h  client_mgr_impl.cpp  client_mgr_impl.h  communication_info_base.h  connection_mgr_impl.cpp  connection_mgr_impl.h  (+30 more)
daemon/access_control/: PeerCreds.cpp  PeerCreds.h  Privilege.cpp  Privilege.h  peer_creds.cpp  peer_creds.h  privilege.cpp  privilege.h
daemon/discovery_provider/: IotconDiscoveryProvider.cpp  IotconDiscoveryProvider.h  SmartviewDiscoveryProvider.cpp  SmartviewDiscoveryProvider.h  WifiDirectDiscoveryProvider.cpp  WifiDirectDiscoveryProvider.h  ble_discovery_provider.cpp  ble_discovery_provider.h  iotcon_discovery_provider.cpp  iotcon_discovery_provider.h  smartview_discovery_provider.cpp  smartview_discovery_provider.h  wifi_direct_discovery_provider.cpp  wifi_direct_discovery_provider.h
daemon/discovery_provider/iotcon/: DeviceAdapter.cpp  DeviceAdapter.h  ResourceHandle.cpp  ResourceHandle.h  ServiceAdapter.cpp  ServiceAdapter.h  device_adapter.cpp  device_adapter.h  resource_handle.cpp  resource_handle.h  service_adapter.cpp  service_adapter.h
daemon/discovery_provider/smartview/: SmartViewDevice.cpp  SmartViewDevice.h  SmartViewService.cpp  SmartViewService.h  device.cpp  device.h  service.cpp  service.h
daemon/service_provider/: AppCommServiceApplication.cpp  AppCommServiceApplication.h  AppCommServiceInfo.cpp  AppCommServiceInfo.h  AppCommServiceProvider.cpp  AppCommServiceProvider.h  RemoteAppControlServiceInfo.h  RemoteAppControlServiceProvider.cpp  RemoteAppControlServiceProvider.h  app_comm_service_info.h  app_comm_service_provider.cpp  app_comm_service_provider.h  remote_app_control_service_info.h  remote_app_control_service_provider.cpp  remote_app_control_service_provider.h  remote_interaction_service_provider.cpp  remote_interaction_service_provider.h
doc/: d2d_conv_manager_doc.h
lib/: CMakeLists.txt  conv_lib.cpp  conv_lib_channel.cpp  conv_lib_json.cpp  conv_lib_json.h  conv_lib_payload.cpp  conv_lib_service.cpp  conv_lib_util.cpp  conv_lib_util.h  d2d-conv-manager.pc.in  dbus_client.cpp  dbus_client.h  internal_types.h
lib/include/: d2d_conv_channel.h  d2d_conv_device.h  d2d_conv_error.h  d2d_conv_internal.h  d2d_conv_manager.h  d2d_conv_payload.h  d2d_conv_service.h
msf_tizen_client/: AUTHORS  LICENSE
msf_tizen_client/include/: Application.h  ApplicationInfo.h  Channel.h  Client.h  Clients.h  Debug.h  Device.h  Error.h  MSFDSearchProvider.h  Message.h  Result.h  Search.h  SearchProvider.h  Service.h  URIparser.h  mDNSSearchProvider.h
msf_tizen_client/src/: Application.cpp  ApplicationInfo.cpp  Channel.cpp  Client.cpp  Clients.cpp  Device.cpp  Error.cpp  MSFDSearchProvider.cpp  Message.cpp  Result.cpp  Search.cpp  SearchProvider.cpp  Service.cpp  URIparser.cpp  mDNSSearchProvider.cpp
msf_tizen_client/test/: CMakeLists.txt  main.cpp
packaging/: d2d-conv-manager-old.manifest  d2d-conv-manager-old.service  d2d-conv-manager.conf  d2d-conv-manager.service  d2d-conv-manager.spec
test/: CMakeLists.txt  test.c
