LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib/disc_mgr/include)

SET(TEST "d2d-conv-manager-test")

FILE(GLOB TEST_SRCS *.c)

pkg_check_modules(test_pkgs REQUIRED glib-2.0)
INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})

#SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

ADD_EXECUTABLE(${TEST} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${TEST} ${test_pkgs_LIBRARIES} ${CLIENT})

INSTALL(TARGETS ${TEST} DESTINATION ${BIN_INSTALL_DIR})
